--- a/dbf_website/default.css
+++ b/dbf_website/default.css
@@ -94,7 +94,7 @@ h3 {
 h4 {
   font:1.0em sans-serif;
   font-weight:bold;
-  color:#AAA;
+  color:#777;
   margin-top:10px;
   margin-bottom:5px;
   margin-left:5px;
